--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionRes
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=/Users/Aeztic/Downloads/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.21.jar=/Users/Aeztic/Downloads/mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
