--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,25 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionRes
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=/Users/Aeztic/Downloads/activation-1.1.1.jar
+file.reference.Downloads-jfreechart-1.0.19=/Users/Aeztic/Downloads/jfreechart-1.0.19
+file.reference.itextpdf-5.5.13.3.jar=/Users/Aeztic/Downloads/itextpdf-5.5.13.3.jar
+file.reference.javax.mail-1.6.2.jar=/Users/Aeztic/Downloads/javax.mail-1.6.2.jar
 file.reference.jcalendar-1.4.jar=/Users/Aeztic/Downloads/jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=/Users/Aeztic/Downloads/jfreechart-1.0.19/lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=/Users/Aeztic/Downloads/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-8.0.21.jar=/Users/Aeztic/Downloads/mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.Downloads-jfreechart-1.0.19}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +89,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GestionRes
-main.class=Forms.Main
+main.class=AppLauncher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
